[project]
name = "ikflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "pyqt5>=5.15.11",
    "six>=1.17.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "trimesh>=4.6.13",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
